--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,7 @@ google-auth==2.27.0
 google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.60.0
+gunicorn==21.2.0
 h11==0.14.0
 h5py==3.10.0
 huggingface-hub==0.20.3
