Add pytest to github Actions yml

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,6 +32,10 @@ jobs:
         working-directory: 'src'
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Run unit tests
+        run: |
+          python -m pytest
+        working-directory: 'src'
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
